<resources>
    <string name="app_name">Delivery App</string>
    <string name="please_wait">Please wait…</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="offer">Offer</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="shop_now">SHOP NOW</string>
    <string name="search_products_shops">Search products</string>
    <string name="see_all">See All</string>
    <string name="service">Service</string>
    <string name="occasions">Occasions</string>
    <string name="special_package">Special Package</string>
    <string name="for_you">For You</string>
    <string name="celebrities">Celebrities</string>
    <string name="best_selling">Best Selling</string>
    <string name="offers">Offers</string>
    <string name="special_catering">Special Catering</string>
    <string name="entertainment">Entertainment</string>
    <string name="distinctive_choices">Distinctive choices</string>
    <string name="delivery_option">Delivery Option</string>
    <string name="login">Login</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name*</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_accept_all_terms_amp_conditions_of_le_service"><![CDATA[I Accept All Terms & Conditions Of Le Service]]></string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="please_enter_the_email_address_which_you_registered_here">Please Enter The Email Address Which You Registered Here</string>
    <string name="send">Send</string>
    <string name="filter">Filter</string>
    <string name="done">Done</string>
    <string name="clear_all">Clear All</string>
    <string name="all">All</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="your_cart_is_empty">YOUR CART IS EMPTY</string>
    <string name="you_have_no_items_in_your_shopping_cart">You have no items in your shopping cart.</string>
    <string name="confirm">Confirm</string>
    <string name="add_card">Add Card</string>
    <string name="gift_card_with_a_custom_message">Gift Card with a custom Message</string>
    <string name="choose_flower_color">Choose Flower Color</string>
    <string name="cash_gift">Cash Gift</string>
    <string name="or_write_your_cash_gift">OR Write your cash Gift</string>
    <string name="add_chocolate">Add Chocolate</string>
    <string name="special_request">Special Request</string>
    <string name="write_your_message_or_card_message">Write your Message or Card Message</string>
    <string name="recipient_number">Recipient Number</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="video">Video</string>
    <string name="record_a_30_second_video_of_yourself">Record a 30 second video of yourself</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select Date</string>
    <string name="delivery_today">Delivery Today</string>
    <string name="special_day">Special Day</string>
    <string name="select_time">Select Time</string>
    <string name="sort">Sort</string>
    <string name="exclusive">Exclusive</string>
    <string name="new_">New</string>
    <string name="price_low_to_high">Price : Low to High</string>
    <string name="price_high_to_low">Price : High to Low</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="guest">Guest</string>
    <string name="choose_language">Select Language</string>
    <string name="please_choose_your_language">Please choose your language !</string>
    <string name="my_account_details">My Account Details</string>
    <string name="orders">Orders</string>
    <string name="booking">Booking</string>
    <string name="address_book">Address Book</string>
    <string name="wishlist">Wishlist</string>
    <string name="points">Loyalty  Points </string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="follow_us">Follow Us</string>
    <string name="welcome_to_leservice">Welcome to Leservice</string>
    <string name="phone">Phone number</string>
    <string name="email">Email</string>
    <string name="saved_addressess">Saved Addresses</string>
    <string name="new_address">New Address</string>
    <string name="current_location">Current Location</string>
    <string name="no_order">No Order</string>
    <string name="no_booking">No Booking</string>
    <string name="no_saved_address">No Saved Address</string>
    <string name="please_add_new_address">Please Add New Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="my_address">My Address</string>
    <string name="add_address">Add Address</string>
    <string name="block">Block</string>
    <string name="city">City</string>
    <string name="address_name">Address Name*</string>
    <string name="enter_address_name">Enter Address Name</string>
    <string name="apartment">Apartment No</string>
    <string name="avenue">Avenue</string>
    <string name="street">Street Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="floor">Floor</string>
    <string name="building_no">Building No</string>
    <string name="phone_number">Phone Number</string>
    <string name="write_your_address">Write Your Address</string>
    <string name="area">Area</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password*</string>
    <string name="update">Update</string>
    <string name="no_wishlist">No Wishlist</string>
    <string name="please_add_your_wishlist">Please Add your wishlist</string>
    <string name="add_occasion">+ Add Occasion</string>
    <string name="add_occation">Add Occasion</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="occasion">Occasion</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="yearly_reminder">Yearly Reminder</string>
    <string name="no_point">No Point</string>
    <string name="transaction_history">Transaction History</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="error">Error !</string>
    <string name="ok">OK</string>
    <string name="confirm_password_does_not_match">Confirm password does not match</string>
    <string name="please_fill_reqiued_data">Please fill required data !</string>
    <string name="Please_read_and_accept_terms">Please read and accept terms</string>
    <string name="stores">Stores</string>
    <string name="EnterAddressData">Enter Address Data</string>
    <string name="Please_open_map_select_location">Please open map and select location</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="Category">Category</string>
    <string name="delivery">Delivery</string>
    <string name="total_price">Total price</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="currency">KWD</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment">Payment</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="order_as_gift">Order as Gift</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="discount">Discount</string>
    <string name="successfully">successfully</string>
    <string name="Please_select_delivery_address">Please select delivery address</string>
    <string name="order_successfull">Order Successful</string>
    <string name="your_order_has_been_successfully_submitted">Your Order has been Successfully Submitted</string>
    <string name="thank_you_for_your_order">Thank you for your Order!</string>
    <string name="my_order">My Order</string>
    <string name="your_order_has_not_successfully_submitted">Your Order has not Successfully Submitted</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="order_date">Order Date</string>
    <string name="order_id">Order ID</string>
    <string name="order_details">Order details</string>
    <string name="order_summary">Order Summary</string>
    <string name="QTY">QTY</string>
    <string name="payment_options">Payment Options</string>
    <string name="knet">KNET</string>
    <string name="payment_method">Payment method</string>
    <string name="please_select_payment_method">Please select payment method</string>
    <string name="cash">Cash</string>
    <string name="select">Select</string>
    <string name="services">Services</string>
    <string name="description">Description</string>
    <string name="select_package">Select Package</string>
    <string name="any_more_notes">Any more notes?</string>
    <string name="rate_you_order">Rate you order</string>
    <string name="Products">Products</string>
    <string name="companies">Companies</string>
    <string name="packages">Packages</string>
    <string name="upload_a_video_image_to_share_your_feeling_optional">Upload A Video , Image To Share Your Feeling (Optional)</string>
    <string name="send_card_message_optional">Send Card Message (Optional)</string>
    <string name="image">Image</string>
    <string name="upload_image_for_printing">Upload Image For Printing</string>
    <string name="delivery_to">Delivery to</string>
    <string name="old_password">Old Password *</string>
    <string name="skip">Skip</string>
    <string name="don_t_have_an_account">Don’t Have an account?</string>
    <string name="competitions">Competitions</string>
    <string name="recently_arrival">Recently Arrival</string>
    <string name="brands">Brands</string>
    <string name="electronic_games">Electronic Games</string>
    <string name="gift_cards">Gift Cards</string>
    <string name="your_wishlist_is_empty">Your Wishlist Is Empty</string>
    <string name="tap_heart_button_to_start_saving_your_favorite_items">Tap Heart Button To Start Saving Your Favorite Items</string>
    <string name="no_notices_right_now">No Notices Right Now !</string>
    <string name="thank_you_for_shopping_with_wirestore">THANK YOU FOR SHOPPING WITH wirestore</string>
    <string name="a_confirmation_email_has_been_sent_to_your_inbox_to_view_order_details_check_order_history">A confirmation email has been sent to your inbox. To view, order details check the order history</string>
    <string name="try_again">Try again</string>
    <string name="price">Price</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
</resources>