<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:fontFamily="@font/f_bold"
        android:gravity="center"
        android:text="@string/add_to_cart"
        android:textColor="#000"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/checkBoxToday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:buttonTint="#000"
        android:fontFamily="@font/f_bold"
        android:text="@string/delivery_today"
        android:textColor="#000"
        android:textSize="16dp" />


    <TextView
        android:id="@+id/tvDateV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/f_regular"
        android:text="@string/special_day"
        android:textColor="#000"
        android:textSize="14dp" />


    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_with_strock_primary"
        android:backgroundTint="@color/text_second"
        android:fontFamily="@font/f_bold"
        android:gravity="center"
        android:hint="@string/special_day"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:textColor="#000"
        android:textColorHint="@color/text_second"
        android:textSize="16dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawablePadding="15dp"
        android:fontFamily="@font/f_regular"
        android:text="@string/select_time"
        android:textColor="#000"
        android:textSize="14dp" />


    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_with_strock_primary"
        android:backgroundTint="@color/text_second"
        android:fontFamily="@font/f_bold"
        android:gravity="center"
        android:hint="@string/select_time"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="@color/text_second"
        android:textSize="16dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/f_regular"
        android:text="@string/send_card_message_optional"
        android:textColor="#000"
        android:textSize="14dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_with_strock_primary"
        android:backgroundTint="@color/text_second"
        android:fontFamily="@font/f_regular"
        android:gravity="start|top"
        android:hint="@string/write_your_message_or_card_message"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="@color/text_second"
        android:textSize="14dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/f_regular"
        android:text="@string/upload_a_video_image_to_share_your_feeling_optional"
        android:textColor="#000"
        android:textSize="14dp" />

    <LinearLayout
        android:id="@+id/llSelectVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTint="#000"
            android:fontFamily="@font/f_bold"
            android:text="@string/video"
            android:textColor="#fff"
            android:textSize="14dp"
            app:drawableStartCompat="@drawable/ic_video" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/f_regular"
            android:gravity="start"
            android:text="@string/record_a_30_second_video_of_yourself"
            android:textColor="#000"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSelectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTint="#000"
            android:fontFamily="@font/f_bold"
            android:text="@string/image"
            android:textColor="#fff"
            android:textSize="14dp"
            app:drawableStartCompat="@drawable/add_photo_alternate_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/f_regular"
            android:gravity="start"
            android:text="@string/upload_image_for_printing"
            android:textColor="#000"
            android:textSize="10dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:background="@drawable/round_with_strock_primary"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/f_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/round_primary"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/f_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColor="#fff"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>