<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_second"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:fontFamily="@font/f_bold"
        android:text="@string/filter"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/f_semi_bold"
        android:text="@string/search"
         android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp" />


    <EditText
        android:id="@+id/edSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_gray"
        android:fontFamily="@font/f_regular"
        android:hint="@string/search_products_shops"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textAlignment="viewStart"
        android:textColorHint="#A8A6A6"
        android:textSize="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/f_semi_bold"
        android:text="@string/price"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp" />
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton
        android:id="@+id/rbPrice_low_to_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/price_low_to_high"
        android:buttonTint="@color/text_primaryDark" />


    <RadioButton
        android:id="@+id/rbPrice_high_to_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_high_to_low"
        android:buttonTint="@color/text_primaryDark" />

</RadioGroup>


     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_gray"
            android:fontFamily="@font/f_regular"
            android:hint="@string/min"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textColorHint="#A8A6A6"
            android:textSize="14dp" />
        <EditText
            android:id="@+id/etMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_gray"
            android:fontFamily="@font/f_regular"
            android:hint="@string/max"
            android:layout_margin="5dp"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColorHint="#A8A6A6"
            android:textSize="14dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvClearAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_with_strock_primary"
            android:fontFamily="@font/f_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tvDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_primary"
            android:fontFamily="@font/f_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/search"
            android:textColor="@color/color_second"
            android:textSize="14dp" />
    </LinearLayout>
</LinearLayout>